add tfidf to the recommender system

--- a/hybrid.ipynb
+++ b/hybrid.ipynb
@@ -1003,15 +1003,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d9ea9140",
+   "metadata": {},
+   "source": [
+    "Combine knn_matrix and tfidf_matrix together"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "16ed0cbd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import normalize\n",
     "from scipy.sparse import hstack\n",
     "\n",
-    "combined_matrix = hstack([tfidf_matrix, knn_matrix])"
+    "# Set the weight\n",
+    "tfidf_weight = 0.3\n",
+    "knn_weight = 0.7\n",
+    "\n",
+    "# Normalize the matrices\n",
+    "tfidf_matrix_normalized = normalize(tfidf_matrix)\n",
+    "knn_matrix_normalized = normalize(knn_matrix)\n",
+    "\n",
+    "# Combined the normalized metrices\n",
+    "combined_matrix = hstack([tfidf_matrix_normalized, knn_matrix_normalized])"
    ]
   },
   {
@@ -1237,19 +1255,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>152</th>\n",
-       "      <td>เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...</td>\n",
-       "      <td>0.672318</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>42</th>\n",
        "      <td>การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnosti...</td>\n",
-       "      <td>0.722705</td>\n",
+       "      <td>0.687288</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43</th>\n",
        "      <td>การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...</td>\n",
-       "      <td>0.754771</td>\n",
+       "      <td>0.703325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>รังสีวิทยาวินิจฉัย</td>\n",
+       "      <td>0.721580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...</td>\n",
+       "      <td>0.723664</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1257,9 +1280,10 @@
       ],
       "text/plain": [
        "                                                Course  Cosine Distance\n",
-       "152  เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...         0.672318\n",
-       "42   การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnosti...         0.722705\n",
-       "43   การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...         0.754771"
+       "42   การวินิจฉัยภาวะฉุกเฉินจากอุบัติเหตุ (Diagnosti...         0.687288\n",
+       "43   การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...         0.703325\n",
+       "110                                 รังสีวิทยาวินิจฉัย         0.721580\n",
+       "152  เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...         0.723664"
       ]
      },
      "execution_count": 30,
@@ -1447,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "id": "bf895bd5e81470f1",
    "metadata": {
     "ExecuteTime": {
@@ -1493,52 +1517,52 @@
        "    <tr>\n",
        "      <th>43</th>\n",
        "      <td>การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...</td>\n",
-       "      <td>0.753351</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...</td>\n",
-       "      <td>0.277301</td>\n",
+       "      <td>0.714826</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>110</th>\n",
        "      <td>รังสีวิทยาวินิจฉัย</td>\n",
-       "      <td>0.219784</td>\n",
+       "      <td>0.437718</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...</td>\n",
+       "      <td>0.312712</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>152</th>\n",
        "      <td>เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...</td>\n",
-       "      <td>0.176883</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>124</th>\n",
-       "      <td>สารสนเทศทางสาธารณสุข 2566 (Public Health Infor...</td>\n",
-       "      <td>0.073328</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>การวิจัยแบบผสมผสานทางสุขภาพ (Mixed Methods Res...</td>\n",
-       "      <td>0.032697</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136</th>\n",
-       "      <td>หลักสูตรอบรมเข้มข้นระยะสั้นแพทย์-วิศวกรรมและวิ...</td>\n",
-       "      <td>0.022270</td>\n",
+       "      <td>0.227350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>117</th>\n",
        "      <td>วิทยาศาสตร์การแพทย์คลินิก สาขาวิชาเวชศาสตร์ฉุก...</td>\n",
-       "      <td>0.018849</td>\n",
+       "      <td>0.124982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>สารสนเทศทางสาธารณสุข 2566 (Public Health Infor...</td>\n",
+       "      <td>0.036664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>การวิจัยแบบผสมผสานทางสุขภาพ (Mixed Methods Res...</td>\n",
+       "      <td>0.016349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>หลักสูตรอบรมเข้มข้นระยะสั้นแพทย์-วิศวกรรมและวิ...</td>\n",
+       "      <td>0.011135</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
        "      <td>ทักษะความเป็นนักดนตรี</td>\n",
-       "      <td>0.017921</td>\n",
+       "      <td>0.008960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>123</th>\n",
        "      <td>สอบคัดเลือกเพื่อเข้าอบรมหลักสูตรอบรมเข้มข้นระย...</td>\n",
-       "      <td>0.015647</td>\n",
+       "      <td>0.007824</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1547,25 +1571,25 @@
       "text/plain": [
        "                                                  Course     Score\n",
        "Index                                                             \n",
-       "43     การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...  0.753351\n",
-       "131    หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...  0.277301\n",
-       "110                                   รังสีวิทยาวินิจฉัย  0.219784\n",
-       "152    เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...  0.176883\n",
-       "124    สารสนเทศทางสาธารณสุข 2566 (Public Health Infor...  0.073328\n",
-       "41     การวิจัยแบบผสมผสานทางสุขภาพ (Mixed Methods Res...  0.032697\n",
-       "136    หลักสูตรอบรมเข้มข้นระยะสั้นแพทย์-วิศวกรรมและวิ...  0.022270\n",
-       "117    วิทยาศาสตร์การแพทย์คลินิก สาขาวิชาเวชศาสตร์ฉุก...  0.018849\n",
-       "98                                 ทักษะความเป็นนักดนตรี  0.017921\n",
-       "123    สอบคัดเลือกเพื่อเข้าอบรมหลักสูตรอบรมเข้มข้นระย...  0.015647"
+       "43     การวินิจฉัยภาวะฉุกเฉินที่ไม่ได้เกิดจากอุบัติเห...  0.714826\n",
+       "110                                   รังสีวิทยาวินิจฉัย  0.437718\n",
+       "131    หลักการและพื้นฐานของเครื่องมือทางรังสีวิทยา (B...  0.312712\n",
+       "152    เตรียมความพร้อมทางรังสีวิทยาสำหรับบุคลากรทางกา...  0.227350\n",
+       "117    วิทยาศาสตร์การแพทย์คลินิก สาขาวิชาเวชศาสตร์ฉุก...  0.124982\n",
+       "124    สารสนเทศทางสาธารณสุข 2566 (Public Health Infor...  0.036664\n",
+       "41     การวิจัยแบบผสมผสานทางสุขภาพ (Mixed Methods Res...  0.016349\n",
+       "136    หลักสูตรอบรมเข้มข้นระยะสั้นแพทย์-วิศวกรรมและวิ...  0.011135\n",
+       "98                                 ทักษะความเป็นนักดนตรี  0.008960\n",
+       "123    สอบคัดเลือกเพื่อเข้าอบรมหลักสูตรอบรมเข้มข้นระย...  0.007824"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recommender_knn_by_user('THANAKORN DARASRISAK', 10)"
+    "recommender_hybrid_by_user('THANAKORN DARASRISAK', 10)"
    ]
   },
   {
@@ -1577,12 +1601,12 @@
     }
    },
    "source": [
-    "Training and Testing"
+    "Training and Testing part"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "id": "ce5d56e62ccafebc",
    "metadata": {
     "ExecuteTime": {
@@ -1596,7 +1620,19 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.neighbors import KNeighborsRegressor"
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.pipeline import make_pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de7122e9",
+   "metadata": {},
+   "source": [
+    "k nearest neighbors"
    ]
   },
   {
@@ -1745,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 72,
    "id": "83e5605b241f020f",
    "metadata": {
     "ExecuteTime": {
@@ -1764,13 +1800,13 @@
     "\n",
     "# Use the train test split function\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, random_state=10, test_size=0.25\n",
+    "    X, y, random_state=42, test_size=0.25\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "id": "1ebfde189788d1b0",
    "metadata": {
     "ExecuteTime": {
@@ -1789,8 +1825,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30d579b1",
+   "metadata": {},
+   "source": [
+    "Term Frequency and Inverse Document Frequency"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df4e0afe",
+   "metadata": {},
+   "source": [
+    "Predata of training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 165,
+   "id": "4a5ada54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('X.pickle', 'rb') as f:\n",
+    "    X = pickle.load(f)\n",
+    "with open('y.pickle', 'rb') as f:\n",
+    "    y = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59f27fa9",
+   "metadata": {},
+   "source": [
+    "Split the train and the test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "9b1a5a71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d65f4f4",
+   "metadata": {},
+   "source": [
+    "Split the train and the tesr for GaussianNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "3eb5a748",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "naive_bayes = GaussianNB()\n",
+    "naive_bayes.fit(X_train, y_train)\n",
+    "predictions = naive_bayes.predict(X_test)\n",
+    "\n",
+    "# Convert the output to a boolean number\n",
+    "predictions = [ 1 if x == 'recommended' else 0 for x in predictions]\n",
+    "y_test = [ 1 if x == 'recommended' else 0 for x in y_test]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
    "id": "d31f84dd1f099bca",
    "metadata": {
     "ExecuteTime": {
@@ -1806,8 +1913,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.07524013250199839\n",
-      "Mean Absolute Error: 0.10501315558555732\n"
+      "Mean Squared Error: 0.0661764705882353\n",
+      "Mean Absolute Error: 0.0661764705882353\n"
      ]
     }
    ],
