--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d3da61f397b9ca5d",
    "metadata": {
     "ExecuteTime": {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "c368d2c6cb469623",
    "metadata": {
     "ExecuteTime": {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "e4dc26afbc54f2c0",
    "metadata": {
     "ExecuteTime": {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "b3f21aedd43e6caf",
    "metadata": {
     "ExecuteTime": {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "349242dd",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "cb5cd99f50462dca",
    "metadata": {
     "ExecuteTime": {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "72a9699b",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "ddf0d8ab318c7c87",
    "metadata": {
     "ExecuteTime": {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "991b48164c403112",
    "metadata": {
     "ExecuteTime": {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "c0f4db781812aba2",
    "metadata": {
     "ExecuteTime": {
@@ -458,7 +458,7 @@
        "33                    0.258951  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "594104f8545fe00",
    "metadata": {
     "ExecuteTime": {
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "791def1b6f809e22",
    "metadata": {
     "ExecuteTime": {
@@ -676,7 +676,7 @@
        "[167 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "fdf28ef643836d21",
    "metadata": {
     "ExecuteTime": {
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "e2425ec0689e85cb",
    "metadata": {
     "ExecuteTime": {
@@ -840,7 +840,7 @@
        "133    หลักสูตรย่อยที่ 1 พื้นฐานการดูแลสุขภาพสัตว์เลี...  0.183915"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "d7f11154302384b6",
    "metadata": {
     "ExecuteTime": {
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "4bc62956e5c60302",
    "metadata": {
     "ExecuteTime": {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "6f9d7911e888904e",
    "metadata": {
     "ExecuteTime": {
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "9b59b739",
    "metadata": {},
    "outputs": [],
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "5cc31182ad866b3d",
    "metadata": {
     "ExecuteTime": {
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "9f7ff944",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "9857a9e91a2fd619",
    "metadata": {
     "ExecuteTime": {
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "ecd8ac0f64017b57",
    "metadata": {
     "ExecuteTime": {
@@ -1196,6 +1196,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "74877cd9",
+   "metadata": {},
+   "source": [
+    "Mean of columns in each row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "c67324e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "means = []\n",
+    "for i in range(number_of_courses):\n",
+    "    sum_columns = np.sum(tfidf_matrix[i])\n",
+    "    num_columns = tfidf_matrix[i].getnnz()\n",
+    "    mean_columns = sum_columns / num_columns\n",
+    "    means.append(mean_columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f5d05b95",
    "metadata": {},
    "source": [
@@ -1204,121 +1227,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 116,
    "id": "1f14300b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>course</th>\n",
-       "      <th>label</th>\n",
-       "      <th>mean</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Cancer Epidemiology and Prevention</td>\n",
-       "      <td>epidemiology</td>\n",
-       "      <td>0.324278</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Coaching Skill : Crafting a New You สำหรับนักศ...</td>\n",
-       "      <td>coaching</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Coaching Skill : Crafting a New You สำหรับบุคล...</td>\n",
-       "      <td>coaching</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Development Studies &amp; Social Research Speciali...</td>\n",
-       "      <td>usac</td>\n",
-       "      <td>0.103844</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Digital Transformation: e-Document</td>\n",
-       "      <td>digital</td>\n",
-       "      <td>0.155729</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Environmental Economics (USAC programs) - Fall...</td>\n",
-       "      <td>usac</td>\n",
-       "      <td>0.192270</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...</td>\n",
-       "      <td>global</td>\n",
-       "      <td>0.214229</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...</td>\n",
-       "      <td>global</td>\n",
-       "      <td>0.214229</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Global Citizenship – โรงเรียนสันป่าตองวิทยาคม ...</td>\n",
-       "      <td>global</td>\n",
-       "      <td>0.214229</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Global Citizenship – โรงเรียนแม่ริมวิทยาคม 2566</td>\n",
-       "      <td>global</td>\n",
-       "      <td>0.214229</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              course         label      mean\n",
-       "0                 Cancer Epidemiology and Prevention  epidemiology  0.324278\n",
-       "1  Coaching Skill : Crafting a New You สำหรับนักศ...      coaching  1.000000\n",
-       "2  Coaching Skill : Crafting a New You สำหรับบุคล...      coaching  1.000000\n",
-       "3  Development Studies & Social Research Speciali...          usac  0.103844\n",
-       "4                 Digital Transformation: e-Document       digital  0.155729\n",
-       "5  Environmental Economics (USAC programs) - Fall...          usac  0.192270\n",
-       "6  Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...        global  0.214229\n",
-       "7  Global Citizenship – โรงเรียนมงฟอร์ตวิทยาลัย ส...        global  0.214229\n",
-       "8  Global Citizenship – โรงเรียนสันป่าตองวิทยาคม ...        global  0.214229\n",
-       "9    Global Citizenship – โรงเรียนแม่ริมวิทยาคม 2566        global  0.214229"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# X = pd.DataFrame({\n",
+    "#     'course': courses,\n",
+    "#     'mean': means\n",
+    "# })\n",
+    "\n",
+    "# X.set_index('course', inplace=True)\n",
+    "X = tfidf_matrix\n",
+    "\n",
     "# Create a DataFrame from courses and item_list\n",
     "def get_mean(item):\n",
     "    arr = recommender_tfidf(item, cosine_similarities)['Cosine Similarity Score']\n",
@@ -1327,11 +1248,6 @@
     "    else:\n",
     "        return arr.mean()\n",
     "    \n",
-    "X = pd.DataFrame({\n",
-    "    'course': courses,\n",
-    "    'label': item_list,\n",
-    "    'mean': [ get_mean(item) for item in courses ]\n",
-    "})\n",
     "\n",
     "def get_label(item):\n",
     "    mean = get_mean(item)\n",
@@ -1340,33 +1256,52 @@
     "    else:\n",
     "        return 'not recommended'\n",
     "    \n",
-    "y = [ get_label(course) for course in courses ]\n",
-    "\n",
-    "X.head(10)"
+    "y = [ get_label(course) for course in courses ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f70b06f",
+   "metadata": {},
+   "source": [
+    "Export X and y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 112,
+   "id": "3ca45e3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('X.pickle', 'wb') as f:\n",
+    "    pickle.dump(X, f)\n",
+    "with open('y.pickle', 'wb') as f:\n",
+    "    pickle.dump(y, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "921c70db",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['recommended', 'not recommended', 'not recommended', 'recommended',\n",
-       "       'recommended', 'not recommended', 'not recommended', 'recommended',\n",
-       "       'not recommended', 'not recommended', 'recommended',\n",
-       "       'not recommended', 'recommended', 'not recommended',\n",
-       "       'not recommended', 'recommended', 'recommended', 'recommended',\n",
-       "       'not recommended', 'recommended', 'not recommended', 'recommended',\n",
-       "       'not recommended', 'not recommended', 'recommended', 'recommended',\n",
+       "array(['not recommended', 'recommended', 'not recommended', 'recommended',\n",
        "       'recommended', 'not recommended', 'recommended', 'not recommended',\n",
-       "       'recommended', 'not recommended', 'recommended', 'not recommended'],\n",
+       "       'not recommended', 'recommended', 'recommended', 'recommended',\n",
+       "       'recommended', 'recommended', 'recommended', 'not recommended',\n",
+       "       'not recommended', 'recommended', 'not recommended',\n",
+       "       'not recommended', 'recommended', 'recommended', 'not recommended',\n",
+       "       'not recommended', 'not recommended', 'recommended', 'recommended',\n",
+       "       'recommended', 'recommended', 'not recommended', 'not recommended',\n",
+       "       'not recommended', 'not recommended', 'not recommended'],\n",
        "      dtype='<U15')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "5ef15b47",
    "metadata": {},
    "outputs": [
@@ -1411,8 +1346,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.29411764705882354\n",
-      "Mean Absolute Error: 0.29411764705882354\n"
+      "Mean Squared Error: 0.2647058823529412\n",
+      "Mean Absolute Error: 0.2647058823529412\n"
      ]
     }
    ],
