--- a/tfidf.ipynb
+++ b/tfidf.ipynb
@@ -1196,29 +1196,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74877cd9",
-   "metadata": {},
-   "source": [
-    "Mean of columns in each row"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "id": "c67324e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "means = []\n",
-    "for i in range(number_of_courses):\n",
-    "    sum_columns = np.sum(tfidf_matrix[i])\n",
-    "    num_columns = tfidf_matrix[i].getnnz()\n",
-    "    mean_columns = sum_columns / num_columns\n",
-    "    means.append(mean_columns)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f5d05b95",
    "metadata": {},
    "source": [
@@ -1227,18 +1204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 124,
    "id": "1f14300b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X = pd.DataFrame({\n",
-    "#     'course': courses,\n",
-    "#     'mean': means\n",
-    "# })\n",
-    "\n",
-    "# X.set_index('course', inplace=True)\n",
-    "X = tfidf_matrix\n",
+    "X = tfidf_matrix.toarray()\n",
     "\n",
     "# Create a DataFrame from courses and item_list\n",
     "def get_mean(item):\n",
@@ -1269,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 125,
    "id": "3ca45e3b",
    "metadata": {},
    "outputs": [],
