--- a/hybrid.ipynb
+++ b/hybrid.ipynb
@@ -26,23 +26,10 @@
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/workspaces/recommendation-system/.conda/lib/python3.12/site-packages/fuzzywuzzy/fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
-      "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics.pairwise import linear_kernel\n",
-    "from copy import deepcopy\n",
-    "from scipy.spatial.distance import pdist, squareform\n",
     "from scipy.sparse import csr_matrix\n",
     "from sklearn.neighbors import NearestNeighbors\n",
     "from fuzzywuzzy import process\n",
@@ -1471,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "id": "bf895bd5e81470f1",
    "metadata": {
     "ExecuteTime": {
@@ -1583,7 +1570,7 @@
        "123    สอบคัดเลือกเพื่อเข้าอบรมหลักสูตรอบรมเข้มข้นระย...  0.007824"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1606,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 36,
    "id": "ce5d56e62ccafebc",
    "metadata": {
     "ExecuteTime": {
@@ -1622,9 +1609,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.pipeline import make_pipeline"
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score"
    ]
   },
   {
@@ -1781,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 39,
    "id": "83e5605b241f020f",
    "metadata": {
     "ExecuteTime": {
@@ -1806,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 40,
    "id": "1ebfde189788d1b0",
    "metadata": {
     "ExecuteTime": {
@@ -1822,6 +1807,26 @@
     "regressor = KNeighborsRegressor(n_neighbors=3)\n",
     "regressor.fit(X_train, y_train)\n",
     "predictions = regressor.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "211ba17f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 0.07170706993639227\n",
+      "Mean Absolute Error: 0.08857031613000077\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Mean Squared Error:\", mean_squared_error(predictions,y_test) / 4)\n",
+    "print(\"Mean Absolute Error:\", mean_absolute_error(predictions,y_test) / 4)"
    ]
   },
   {
@@ -1842,14 +1847,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 119,
    "id": "4a5ada54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('X.pickle', 'rb') as f:\n",
+    "with open('tfidf_X.pickle', 'rb') as f:\n",
     "    X = pickle.load(f)\n",
-    "with open('y.pickle', 'rb') as f:\n",
+    "with open('tfidf_y.pickle', 'rb') as f:\n",
     "    y = pickle.load(f)"
    ]
   },
@@ -1863,29 +1868,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "9b1a5a71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4d65f4f4",
-   "metadata": {},
-   "source": [
-    "Split the train and the tesr for GaussianNB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 120,
    "id": "3eb5a748",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split the train test data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Fit model selection\n",
     "naive_bayes = GaussianNB()\n",
     "naive_bayes.fit(X_train, y_train)\n",
     "predictions = naive_bayes.predict(X_test)\n",
@@ -1896,8 +1887,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c8000ef",
+   "metadata": {},
+   "source": [
+    "Measure the performance for our parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 121,
    "id": "d31f84dd1f099bca",
    "metadata": {
     "ExecuteTime": {
@@ -1913,14 +1912,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.0661764705882353\n",
-      "Mean Absolute Error: 0.0661764705882353\n"
+      "Accuracy: 0.9705882352941176 \n",
+      "Precision: 0.9747899159663864, \n",
+      "Recall: 0.9705882352941176, \n",
+      "F1: 0.9714520773344304\n"
      ]
     }
    ],
    "source": [
-    "print(\"Mean Squared Error:\", mean_squared_error(predictions,y_test) / 4)\n",
-    "print(\"Mean Absolute Error:\", mean_absolute_error(predictions,y_test) / 4)"
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "precision = precision_score(y_test, predictions, average='weighted')\n",
+    "recall = recall_score(y_test, predictions, average='weighted')\n",
+    "f1 = f1_score(y_test, predictions, average='weighted')\n",
+    "\n",
+    "print(f'Accuracy: {accuracy} \\nPrecision: {precision}, \\nRecall: {recall}, \\nF1: {f1}')"
    ]
   }
  ],
